--- a/index.html
+++ b/index.html
@@ -16,6 +16,28 @@
 
   <script type="module" src="/src/main.jsx"></script>
 
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/img/partners/VRSDCLOGO.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vedubuild</title>
+
+  <!-- ✅ Google Translate -->
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+  <!-- ✅ Razorpay SDK -->
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
+</html>
 
 </body>
 
